fixed terminal styling on mobile and slider interactivy on both platforms

--- a/slider.css
+++ b/slider.css
@@ -9,10 +9,22 @@ section.slider {
   padding: 0;
   width: 100vw;
   margin: 0;
+  position: relative;
+  background: rgb(252, 176, 69);
+  background: linear-gradient(
+    108deg,
+    #0f2027 0%,
+    #203a43 10%,
+    #2c5364 25%,
+    #136a8a 75%,
+    #267871 100%
+  );
+  background-size: 300%;
+  background-position: var(--left-side-width) 0%;
 }
 
 .side {
-  color: black;
+  color: white;
   height: 100%;
   width: 100%;
 
@@ -30,13 +42,13 @@ section.slider {
 }
 
 #left-side {
-  background-color: #4158d0;
+  /* background-color: #4158d0;
   background-image: linear-gradient(
     320deg,
     #4158d0 0%,
     #c850c0 46%,
     #ffcc70 100%
-  );
+  ); */
   z-index: 2;
   width: var(--left-side-width);
   transition: background-color 0.2s;
@@ -55,30 +67,31 @@ section.slider {
 span.slider-grabber {
   position: absolute;
   top: 50%;
-  right: -20px;
+  left: var(--left-side-width);
   width: 40px;
   height: 40px;
   background: white;
   border-radius: 50%;
   cursor: ew-resize;
-}
-
-span.slider-grabber:active {
-  cursor: pointer;
+  z-index: 10;
+  transform: translateX(-50%);
+  box-shadow: 8px 8px 24px 0px rgb(66 68 90),
+    inset 2px 4px 10px 3px rgb(66 68 90);
 }
 
 .slider-container {
   user-select: none;
+  height: 100%;
 }
 
 #right-side {
-  background-color: #151515;
+  /* background-color: #151515;
   background-image: linear-gradient(
     45deg,
     #151515 0%,
     #002167 50%,
     #2b86c5 100%
-  );
+  ); */
 
   color: white;
   font: 1.3rem Inconsolata, monospace;
