--- a/style.css
+++ b/style.css
@@ -100,6 +100,6 @@ section {
   width: 100%;
   overflow: hidden;
   padding: 3rem;
-  max-width: var(--content-width);
+  /* max-width: var(--content-width); */
   margin: 0 auto;
 }
