--- a/terminal.css
+++ b/terminal.css
@@ -2,7 +2,8 @@
 @import url("https://fonts.googleapis.com/css?family=Ubuntu+Mono");
 
 .terminal {
-  width: 960px;
+  width: 90%;
+  max-width: 960px;
   height: 65vh;
   box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.5);
   font-family: Ubuntu;
@@ -52,6 +53,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
+  text-align: left;
   padding: 6px;
 }
 
